--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -1,16 +1,27 @@
-name: amn_dbt  # Nombre del proyecto
-version: '1.0'  # Versión del proyecto
-config-version: 2  # Versión de la configuración de DBT
+name: amn_dbt  
+version: '1.0'  
+config-version: 2  
 
-# Definir el modelo y directorios
-profile: my_profile  # Perfil de conexión (debe coincidir con un perfil en profiles.yml)
-model-paths: ["models"]  # Ruta a los modelos DBT (renombrado de `source-paths`)
-target-path: "target"  # Directorio para los resultados de DBT
+profile: my_profile  
+
+model-paths: ["models"] 
+target-path: "target"  
 clean-targets:
   - "target"
   - "dbt_modules"
 
-# Definir el tipo de base de datos
 models:
-  my_project:
-    +materialized: view  # Configuración por defecto de materialización
+  amn_dbt:  
+    +materialized: view 
+
+    sales:
+      +materialized: table
+
+    purchase_prices:
+      +materialized: table
+
+    profit_and_margin:
+      +materialized: table
+
+    least_profitability:
+      +materialized: table
