--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -3,7 +3,7 @@ my_profile:
   outputs:
     dev:
       type: postgres
-      host: postgresql-data         # PostgreSQL en docker-compose
+      host: data-db                 # PostgreSQL en docker-compose
       user: myuser                  # contenedor de PostgreSQL
       password: mypassword          # contenedor de PostgreSQL
       dbname: amn_datawarehouse     # contenedor de PostgreSQL
